# pydantic-ai-agent

./: .gitignore  README.md  ai-agent.ipynb  pyproject.toml
