[project]
name = "ai-agent-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.5",
    "notebook>=7.4.5",
    "pydantic-ai>=0.7.1",
    "pydantic-ai-slim[tavily]>=0.7.1",
    "python-dotenv>=1.1.1",
    "voila>=0.5.10",
]
